Делаю и интегрирую бд